modules/gdscript/tests/scripts/parser/errors/default_value_in_function_call.gd
func hello(arg1):
	print(arg1)


func test():
	# Error here.
	hello(arg1 = 25)
